<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <!-- Name Label -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Name_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/input_name_SignUp"
                style="@style/EditText"
                android:hint="@string/name_signup"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Email_Id_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/input_email_SignUp"
                style="@style/EditText"
                android:hint="@string/email_signup"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Mobile_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/input_mobile_SignUp"
                style="@style/EditText"
                android:hint="@string/mobile_number_signup"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Password_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/input_password_SignUp"
                style="@style/EditText"
                android:hint="@string/password_signup"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Re_Enter_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/input_reEnterPassword_SignUp"
                style="@style/EditText"
                android:hint="@string/re_enter_password_signup"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- SignUp Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup_SignUp"
            style="@style/buttons"
            android:layout_gravity="center"
            android:ems="15"
            android:padding="12dp"
            android:text="@string/create_account_signup" />

        <TextView
            android:id="@+id/link_login_SignUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/already_a_member_login_signup"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
</LinearLayout>

