<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:src="@drawable/logo"
                android:scaleType="centerCrop" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardBackgroundColor="@color/pageBackground"
            card_view:cardCornerRadius="1dp"
            android:layout_gravity="center"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:background="#ecf0f5">

                <LinearLayout
                    android:id="@+id/rl"
                    android:background="#FFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="0dp">
                        <EditText
                            style="@style/EditText"
                            android:inputType="textPersonName"
                            android:hint="@string/type_Adv_Pet"
                            android:id="@+id/type_AD"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp">
                        <EditText
                            style="@style/EditText"
                            android:inputType="textPersonName"
                            android:hint="@string/breed_Adv_Pet"
                            android:id="@+id/breed_AD"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:id="@+id/TIL">
                        <EditText
                            style="@style/EditText"
                            android:inputType="number"
                            android:hint="@string/age_Adv_Pet"
                            android:id="@+id/age_AD"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/location_AD"
                            style="@style/EditText"
                            android:hint="@string/promotions_Location"
                            android:inputType="text"
                            android:textColor="#000"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp">
                        <EditText
                            style="@style/EditText"
                            android:hint="@string/description_Adv_Pet"
                            android:inputType="textPersonName"
                            android:id="@+id/description_AD"/>
                    </android.support.design.widget.TextInputLayout>
                    <LinearLayout
                        style="@style/EditText"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginTop="0dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/adoption_Adv_Pet"
                            android:textColor="@color/TextBoxColor"
                            android:textSize="18sp"/>
                        <RadioGroup
                            style="@style/EditText"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:id="@+id/Adoption_AD"
                            android:layout_marginLeft="25dp"
                            android:layout_marginStart="25dp">
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/free_Adv_Pet"
                                android:id="@+id/Free"
                                android:textSize="16sp"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:checked="true"/>
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/payment_Adv_Pet"
                                android:id="@+id/Payment"
                                android:textSize="16sp"
                                />
                        </RadioGroup>
                    </LinearLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp">
                        <EditText
                            style="@style/EditText"
                            android:hint="@string/price_Adv_Pet"
                            android:inputType="number"
                            android:id="@+id/paymentFare_AD"
                            android:visibility="gone"/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        style="@style/buttons"
                        android:text="Update"
                        android:id="@+id/Post_Ad_Update"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"/>
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>